--- a/.env
+++ b/.env
@@ -30,3 +30,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MAIL_DRIVER=mailgun
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=info@bokov.gq
+MAIL_PASSWORD=5W4wrmp559
+MAIL_ENCRYPTION=tls
