--- a/.env
+++ b/.env
@@ -31,9 +31,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-MAIL_DRIVER=mailgun
-MAIL_HOST=smtp.mailgun.org
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.yandex.ru
 MAIL_PORT=587
-MAIL_USERNAME=postmaster@mail.bokov.gq
-MAIL_PASSWORD=ce2d742c5217b3bfbe440d7255c2d219-0e6e8cad-ae1e7464
+MAIL_USERNAME=info@bokov.gq
+MAIL_PASSWORD=5W4wrmp559
 MAIL_ENCRYPTION=tls
