--- a/.env
+++ b/.env
@@ -36,4 +36,4 @@ MAIL_HOST=smtp.yandex.ru
 MAIL_PORT=587
 MAIL_USERNAME=info@bokov.gq
 MAIL_PASSWORD=5W4wrmp559
-MAIL_ENCRYPTION=tls
+MAIL_ENCRYPTION=ssl
