--- a/.env
+++ b/.env
@@ -32,8 +32,8 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.yandex.ru
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=info@bokov.gq
+MAIL_USERNAME=noreply.bokov@gmail.com
 MAIL_PASSWORD=5W4wrmp559
-MAIL_ENCRYPTION=ssl
+MAIL_ENCRYPTION=tls
